# mynn

./: .gitignore  README.md
examples/mnist/: CMakeLists.txt  mnist.cpp
include/: network.hpp  vector.hpp
include/activation_function/: activation_function.hpp  identity.hpp  logistic.hpp  relu.hpp  tanh.hpp
include/layer/: fully_connected_layer.hpp  layer.hpp
include/loss_function/: loss_function.hpp  softmax_cross_entropy_loss_with_logits.hpp
include/optimizer/: momentum_sgd_optimizer.hpp  optimizer.hpp  sgd_optimizer.hpp
include/util/: util.hpp
